--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
+    <title>Cars Stuff</title>
+    <base href="/" />
     <!--Stylesheet-->
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
-    <base href="/" />
   </head>
   <body>
     <!--Container for React rendering-->
